# listen

./: .env.example  DEPLOY.md  docker-compose.yml
.github/workflows/: build-and-deploy.yml
backend/: .gitignore  Dockerfile  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/app/: app.go  router.go
backend/internal/handler/: authMw.go  handler.go  pages.go  usersBooks.go
backend/internal/s3client/: client.go
backend/internal/session/: session_store.go
backend/internal/storage/: book.go  dbUp.go  models.go  pages.go  postgres.go  sessions.go  usersBooks.go
backend/internal/utils/: splitter.go
docs/: contract.md
frontend/: .dockerignore  Dockerfile  eslint.config.ts  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/App/: App.module.css  App.tsx
frontend/src/api/: fetchers.ts  types.ts
frontend/src/components/AuthForm/: AuthForm.module.css  AuthForm.tsx
frontend/src/components/BookPage/: Book.module.css  Book.tsx
frontend/src/components/CollectPage/: Collection.module.css  Collection.tsx
frontend/src/components/NavigationFooter/: NavigationFooter.tsx
frontend/src/components/ProfilePage/: Profile.module.css  Profile.tsx
frontend/src/pages/: pages.ts
frontend/src/pages/AuthPage/: AuthPage.tsx
frontend/src/store/: BookStore.ts  index.ts
frontend/src/types/: book.ts  user.ts
tts/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
tts/api/v1/: routes.py
tts/api/v1/handlers/: tts.py
tts/core/: config.py
tts/schemas/: schemas.py
tts/services/: s3.py  speechkit.py
(+7 files in other folders)
